--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,7 @@
 name: Release Plugin
 on:
-  push:
-    tags:
-      - 'v*' # Trigger on tags like v1.0.0, v1.0.1, etc.
+  release:
+    types: [published] # Trigger only when a release is published
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,7 +16,7 @@ jobs:
       - name: Upload ZIP as release asset
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ github.event.release.upload_url }}
+          upload_url: ${{ github.event.release.upload_url }} # Use the release's upload URL
           asset_path: ./reserve-mate.zip
           asset_name: reserve-mate.zip
           asset_content_type: application/zip
