--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,12 +13,7 @@ jobs:
         run: |
           zip -r reserve-mate.zip . -x ".git/*" ".github/*"
 
-      - name: Upload ZIP as release asset
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ github.event.release.upload_url }} # Use the release's upload URL
-          asset_path: ./reserve-mate.zip
-          asset_name: reserve-mate.zip
-          asset_content_type: application/zip
+      - name: Upload ZIP as release asset (gh CLI)
+        run: gh release upload ${{ github.event.release.tag_name }} reserve-mate.zip
         env:
           GITHUB_TOKEN: ${{ secrets.repoToken }}
