--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,9 @@
 name: Release Plugin
+permissions:
+  contents: write
 on:
   release:
-    types: [published] # Trigger only when a release is published
+    types: [published]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,7 +18,7 @@ jobs:
       - name: Upload ZIP as release asset
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ github.event.release.upload_url }} # Use the release's upload URL
+          upload_url: ${{ github.event.release.upload_url }}
           asset_path: ./reserve-mate.zip
           asset_name: reserve-mate.zip
           asset_content_type: application/zip
