--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,11 @@ jobs:
       - name: Create ZIP file
         run: |
           zip -r reserve-mate.zip . -x ".git/*" ".github/*"
-
+      - name: Add version and upgrade notice to ZIP
+        run: |
+          echo "version: ${{ github.event.release.tag_name }}" >> version.txt
+          echo "upgrade_notice: ${{ env.UPGRADE_NOTICE }}" >> version.txt
+          zip -u reserve-mate.zip version.txt
       - name: Upload ZIP as release asset
         uses: actions/upload-release-asset@v1
         with:
@@ -24,4 +28,5 @@ jobs:
           asset_content_type: application/zip
         env:
           GITHUB_TOKEN: ${{ github.token }}
+          UPGRADE_NOTICE: Update available
         
